# finance-sim-throwaway

./: LICENSE  README.md  main.py  pyproject.toml
config/: template.yaml
src/: config_loader.py  model.py  reporting.py
src/simulation/: components.py
tests/: test_simulation.py
